--- a/projecto/indicadores/appemitidos/templates/appemitidos/invoiced.html
+++ b/projecto/indicadores/appemitidos/templates/appemitidos/invoiced.html
@@ -6,7 +6,7 @@
     <div class="container">
       <h3 class="mb-3"><i class="bi bi-bar-chart"></i>Facturado por periodos</h3>
       
-      <div class="d-flex justify-content-end mb-2" id="filtersModal">
+      <!-- <div class="d-flex justify-content-end mb-2" id="filtersModal">
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#filtersModal">
           <i class="bi bi-funnel"></i> Filtros
         </button>
@@ -34,7 +34,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
