Cambios hasta el 02-12-2025

--- a/projecto/indicadores/appemitidos/templates/appemitidos/invoiced.html
+++ b/projecto/indicadores/appemitidos/templates/appemitidos/invoiced.html
@@ -162,3 +162,11 @@
   }
 </script>
 {% endblock %}
+
+{% block on_change_group_type %}
+<script>
+    window.__customGroupTypeChange__ = function(el) {
+        locgraficarDatos();
+    }
+</script>
+{% endblock %}
