--- a/projecto/indicadores/appemitidos/templates/appemitidos/invoicedLocation.html
+++ b/projecto/indicadores/appemitidos/templates/appemitidos/invoicedLocation.html
@@ -22,8 +22,8 @@
       {% endblock %} -->
       
       <div class="table-responsive shadow-sm">
-        <table class="table table-bordered table-hover align-middle text-center">
-          <thead class="table-light">
+        <table class="table table-bordered table-hover align-middle text-center mt-3">
+          <thead class="">
             <tr>
               <th>Continente</th>
               <th>País</th>
@@ -37,7 +37,7 @@
               <th>Total</th>
             </tr>
           </thead>
-          <tbody id="tablaLocalizacionesBody">
+          <tbody id="tablaLocalizacionesBody" class="table-group-divider">
             <tr><td colspan="9" class="text-muted">Cargando datos...</td></tr>
           </tbody>
         </table>
